2014-02-15  Kaz Kylheku  <kaz@kylheku.com>

	First cut at implementation of macros.

	* eval.c (top_mb, defmacro_s, macro_time_s, whole_k, env_k): New global
	variables.
	(expand_params): Recurse to handle macro parameter lists too.
	(bind_macro_params, op_defmacro, expand_macro): New static functions.
	(expand): Evaluate defmacro forms and macro-time forms at expansion
	time. Recognize and expand macros (albeit not yet with proper lexical
	scoping: local bindings are not able to shadow a macro).
	(eval_init): Protect top_mb from GC and initialize it.
	Intern new symbols defmacro, macro-time, and :whole.
	Register defmacro operator in op_table.

	* match.h (env_k): Added declaration for existing external variable.

2014-02-15  Kaz Kylheku  <kaz@kylheku.com>

	Bugfix: parameters of defun were not being treated by expander.
	They need to be since they can contain evaluable initforms for default
	arguments. Ditto with lambda; lambda parameters were being treated
	using expand_vars, which is not appropriate.

	* eval.c (expand_opt_params, expand_params): New static functions.
	(expand_vars): Bugfix: added some missing rlcp's to propagate
	line number info.
	(expand): Move lambda to separate case, and expand its params

2014-02-15  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bind_args, op_modplace): Use ~s consistently
	in error messages.

2014-02-15  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bindings_helper): Fixed misspelling of "symbol" in exception
	message.

2014-02-15  Kaz Kylheku  <kaz@kylheku.com>

	A trivial change in the UTF-8 decoder allows TXR to handle null bytes
	in text.

	* utf8.h (UTF8_ADMIT_NUL): New preprocessor symbol.
	(utf8_decoder): New member, flags.

	* utf8.c (utf8_decoder_init): Initialize flags to 0.
	(utf8_decode): If a null byte is encountered in the input,
	then convert it to 0xDC00, rather than keeping it as zero,
	unless flags contains UTF8_ADMIT_NUL.

	* txr.1: Document handling of null bytes.

2014-02-14  Kaz Kylheku  <kaz@kylheku.com>